Raise breadcrumb z-index. Fixes #67.

--- a/src/collaborative_platform/apps/close_reading/static/close_reading/css/main.css
+++ b/src/collaborative_platform/apps/close_reading/static/close_reading/css/main.css
@@ -9,6 +9,7 @@ button span, #alert{
 #breadcrumb{
   position: fixed;
   display: none;
+  z-index: 1000;
 }
 
 #editor p,
